[package]
authors = ["Jack Greenberg <j@jackgreenberg.co>"]
edition = "2018"
readme = "README.md"
name = "dfuh7"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
usb-device = "0.2.9"
usbd-dfu = "0.2.0"

# TODO: decide on panic
# panic-halt = "0.2.0"
panic-itm = "0.4.1"

[dependencies.stm32h7xx-hal]
features = ["stm32h750v", "rt"]
version = "0.12.2"

# this lets you use `cargo fix`!
[[bin]]
name = "dfuh7"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
