[package]
authors = ["Jack Greenberg <j@jackgreenberg.co>"]
edition = "2018"
readme = "README.md"
name = "dfuh7"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.6.10"
usb-device = "0.2.9"
usbd-dfu = "0.2.0"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
bytes = { version = "1.2.1", default_features = false }

[dependencies.stm32h7xx-hal]
features = ["stm32h750v", "rt", "usb_hs", "xspi"]
version = "0.12.2"

# this lets you use `cargo fix`!
[[bin]]
name = "dfuh7"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
